--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -169,7 +169,7 @@
 <section class="portfolio" id="port">
 	<div class="container">
 		<div class="row align-items-center text-center">
-			<h3>Services</h3>
+			<h3>Portfolio</h3>
 			<h2>Check out the great services we offer</h2>
 		</div>
 		
@@ -185,10 +185,10 @@
 		<div class="row port-row">
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
 				<div class="row">
-					<div class="port-image row">
+					<div class="port-images row">
 						<img src="image/portfolio-1.jpg">
 					</div>
-					<div class="port-body ">
+					<div class="port-body">
 						<i class="bx bx-world"></i>
 						<i class="bx bx-world"></i>
 						<h5>App 1</h5>
@@ -342,30 +342,30 @@
 				</div>
 			</div>
 			<div class="accordion-item border-top-0 border-start-0 border-end-0">
-				<h2 class="accordion-header" id="headingThree">
-					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</button>
+				<h2 class="accordion-header" id="headingFour">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</button>
 				</h2>
-				<div id="collapseThree" class="accordion-collapse collapse question-button" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+				<div id="collapseFour" class="accordion-collapse collapse question-button" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
 					<div class="accordion-body">
 						<p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
 					</div>
 				</div>
 			</div>
 			<div class="accordion-item border-top-0 border-start-0 border-end-0">
-				<h2 class="accordion-header" id="headingThree">
-					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</button>
+				<h2 class="accordion-header" id="headingFive">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</button>
 				</h2>
-				<div id="collapseThree" class="accordion-collapse collapse question-button" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+				<div id="collapseFive" class="accordion-collapse collapse question-button" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
 					<div class="accordion-body">
 						<p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
 					</div>
 				</div>
 			</div>
 			<div class="accordion-item border-top-0 border-start-0 border-end-0">
-				<h2 class="accordion-header" id="headingThree">
-					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor?</button>
+				<h2 class="accordion-header" id="headingSix">
+					<button class="accordion-button collapsed question-button fw-bold fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor?</button>
 				</h2>
-				<div id="collapseThree" class="accordion-collapse collapse question-button" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+				<div id="collapseSix" class="accordion-collapse collapse question-button" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
 					<div class="accordion-body">
 						<p>Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.</p>
 					</div>
@@ -447,34 +447,86 @@
 	</div>
 </section>
 <!---clients---->
-<section class="clients" id="clients">
+<section class="client" id="client">
 	<div class="container">
-		<div class="row clients-title align-items-center text-center">
+		<div class="row client-title align-items-center text-center">
 			<h3>Clients</h3>
 			<h2>They trusted us</h2>
 		</div>
 		
-		
-		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-			  <div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			  </div>
-			  <div class="carousel-inner">
-				<div class="carousel-item active">
-				  <img src="image/team-4.jpg" class="d-block w-100" alt="...">
+		<div class="row mt-3 g-5">
+			<div class="col-2 px-5">
+				<div class="row">
+					<img src="image/client-1.png">
 				</div>
-				<div class="carousel-item">
-				  <img src="image/team-4.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-				  <img src="image/team-4.jpg" class="d-block w-100" alt="...">
-				</div>
-			  </div>
-			  
 			</div>
+			<div class="col-2 px-5">
+				<div class="row">
+					<img src="image/client-2.png">
+				</div>
+			</div>
+			<div class="col-2 px-5">
+				<div class="row">
+					<img src="image/client-3.png">
+				</div>
+			</div>
+			<div class="col-2 px-5">
+				<div class="row">
+					<img src="image/client-4.png">
+				</div>
+			</div>
+			<div class="col-2 px-5">
+				<div class="row">
+					<img src="image/client-5.png">
+				</div>
+			</div>
+			<div class="col-2 ps-5">
+				<div class="row">
+					<img src="image/client-6.png">
+				</div>
+			</div>
+
+		</div>
+	</div>
+</section>
+<!----contact section---->
+<section class="contact" id="contact">
+	<div class="container">
+		<div class="row contact-title align-items-center text-center">
+			<h3>Contact</h3>
+			<h2>Contact us the get started</h2>
+		</div>
 		
+		<div class="row">
+			<div class="col-12 col-md-12 col-lg-5">
+				<div class="contact-info shadow">
+					<div class="contact-address">
+						<i class="bi bi-geo-alt"></i>
+						<h4>Location:</h4>	
+						<p>A108 Adam Street, New York, NY 535022</p>
+					</div>
+					<div class="contact-email">
+						<i class="bi bi-envelope"></i>
+						<h4>Email:</h4>	
+						<p>info@example.com</p>
+					</div>
+					<div class="contact-phone">
+						<i class="bi bi-phone"></i>
+						<h4>Phone:</h4>	
+						<p>+91 7397603020</p>
+					</div>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1970.3242092062378!2d77.39699105985206!3d9.004461948736045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b069d7508c942b9%3A0xfe6640ed155993e9!2zQS5SLuCumuCvh-CusOCvjeCuruCuqeCvjSDgrrjgr43grp_gr4vgrrDgr40!5e0!3m2!1sen!2sin!4v1666868294475!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</div>
+			
+			<div class="col-12 col-md-12 col-lg-7">
+				<form class="contact-form contact-info">
+					<div class="row">
+						<div class=""
+					</div>
+				</form>
+			</div>
+		</div>
 		
 	</div>
 </section>
