--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -83,7 +83,7 @@
 <!---about section--->
 <section id="abt"class="about">
 	<div class="container">
-		<div class="abt-flex row align-items-center">
+		<div class="abt-flex row align-items-center mb-5">
 			<div class="col-sm-12 col-md-12 col-lg-6 justify-content-center align-items-center">
 				<div class="row">
 					<img src="image/about-img.svg">
@@ -280,7 +280,7 @@
 						<img src="image/portfolio-8.jpg">
 					</div>
 					<div class="port-body">
-						<i class="bx bx-world"></i>
+						<i cla	ss="bx bx-world"></i>
 						<i class="bx bx-world"></i>
 						<h5>App 1</h5>
 						<p>App</p>
@@ -497,7 +497,7 @@
 			<h2>Contact us the get started</h2>
 		</div>
 		
-		<div class="row">
+		<div class="row pb-4">
 			<div class="col-12 col-md-12 col-lg-5">
 				<div class="contact-info shadow">
 					<div class="contact-address">
@@ -519,10 +519,28 @@
 				</div>
 			</div>
 			
-			<div class="col-12 col-md-12 col-lg-7">
-				<form class="contact-form contact-info">
+			<div class="col-12 col-md-12 col-lg-7 shadow contact-details">
+				<form action="" class="contact-form">
 					<div class="row">
-						<div class=""
+						<div class="col-6 form-group">
+							<label for="name" class="form-label">YOUR NAME</label>
+							<input type="text" class="form-control " id="name" placeholder="Your Name">
+						</div>
+						<div class="col-6 form-group">
+							<label for="email" class="form-label">YOUR EMAIL</label>
+							<input type="email" class="form-control " id="name" placeholder="Your Email">
+						</div>
+						<div class="col-12 form-group mt-4">
+							<label for="subject" class="form-label">SUBJECT</label>
+							<input type="text" class="form-control p-2" id="name" placeholder="Subject">
+						</div>
+						<div class="col-12 mt-4">
+							<label for="Textarea" class="form-label">MESSAGE</label>
+							<textarea class="form-control " id="Textarea" rows="10"></textarea>
+						</div>
+						<div class="text-center form-button mt-5 mb-2">
+							<button class="" type="button">Send Message</button>
+						</div>
 					</div>
 				</form>
 			</div>
@@ -530,10 +548,122 @@
 		
 	</div>
 </section>
-
-
-
-
+<!----news letter section---->
+<section class="news" id="news">
+	<div class="container">
+		<div class="row py-5  justify-content-center">
+			<div class="news-details col-sm-12 col-md-12 col-lg-6 text-center">
+				<h4>Join Our Newsletter</h4>
+				<p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+				<form action="" method="post">
+					<input type="email" name="email">
+					<input type="submit" value="Subscribe">
+				</form>
+			</div>
+		</div>
+	</div>
+</section>
+<!----footer section---->
+<section class="footer"  id="footer">
+	<div class="container">
+		<div class="row my-4">
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<h3>Ninestars</h3>
+				<p> 
+					A108 Adam Street 
+					<br> 
+					New York, NY 535022
+					<br> 
+					United States 
+					<br><br> 
+					<strong>Phone:</strong> +1 5589 55488 55
+					<br> 
+					<strong>Email:</strong> info@example.com
+					<br>
+				</p>
+			</div>
+			
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<h4 class="fs-5 mb-4">Useful Links</h4>
+				<ul>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Home</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">About us</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Services</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Terms of service</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Privacy policy</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<h4 class="fs-5 mb-4">Our Services</h4>
+				<ul>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Web Design</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Web Development</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Product Management</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Marketing</a>
+					</li>
+					<li>
+						<i class="bx bx-chevron-right"></i> 
+						<a href="">Graphic Design</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-sm-12 col-md-6 col-lg-3">
+				<h4 class="fs-5 mb-4">Our Social Networks</h4>
+				<p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+				<div class="social-links mt-3"> 
+					<i class="bx bxl-twitter"></i>
+					<i class="bx bxl-facebook"></i>
+					<i class="bx bxl-instagram"></i>
+					<i class="bx bxl-skype"></i>
+					<i class="bx bxl-linkedin"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<!----footer2---->
+<section class="footersec" id="bott">
+	<div class="container">
+		<div class="row py-4">
+				<div class="col-sm-12 col-md-12 col-lg-6 copyright justify-content-center">
+					© Copyright 
+					<strong><span>Ninestars</span></strong>
+					. All Rights Reserved
+				</div>
+			
+				<div class="col-sm-12 col-md-12 col-lg-6  credits justify-content-center"> 
+					<p>Designed by 
+					<span>BootstrapMade</span></p>
+				</div>
+		</div>
+	</div>
+</section>
 
 
 
