--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -182,119 +182,102 @@
 			</ul>
 		</div>
 		
-		<div class="row port-row">
+		<div class="row port-row g-5">
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-images row">
-						<img src="image/portfolio-1.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-1.jpg">
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-2.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-2.jpg">
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-3.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-3.jpg">
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-4.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-4.jpg">
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-5.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-5.jpg">
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-6.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-6.jpg">
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-7.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-7.jpg">
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-8.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-8.jpg">
 					<div class="port-body">
-						<i cla	ss="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-md-6 col-lg-4 mt-5">
-				<div class="row">
-					<div class="port-image row">
-						<img src="image/portfolio-9.jpg">
-					</div>
+				<div class="row port-content">
+					<img src="image/portfolio-9.jpg">
+	
 					<div class="port-body">
-						<i class="bx bx-world"></i>
-						<i class="bx bx-world"></i>
+						<i class="bi bi-plus"></i>
+						<i class="bi bi-link"></i>
 						<h5>App 1</h5>
 						<p>App</p>
 					</div>
