--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -30,16 +30,16 @@
 							<a class="nav-link active" aria-current="page" href="#">Home</a>
 						</li>
 						<li class="nav-item px-1">
-							<a class="nav-link" href="#">About us</a>
+							<a class="nav-link" href="#abt">About us</a>
 						</li>
 						<li class="nav-item px-1">
-							<a class="nav-link" href="#">Services</a>
+							<a class="nav-link" href="#service">Services</a>
 						</li>
 						<li class="nav-item px-1">
-							<a class="nav-link" href="#">Portfolio</a>
+							<a class="nav-link" href="#port">Portfolio</a>
 						</li>
 						<li class="nav-item px-1">
-							<a class="nav-link" href="#">Team</a>
+							<a class="nav-link" href="#team">Team</a>
 						</li>
 						<li class="nav-item dropdown px-1">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown link</a>
@@ -50,9 +50,9 @@
 							</ul>
 						</li>
 						<li class="nav-item px-2">
-							<a class="nav-link" href="#">Contact</a>
+							<a class="nav-link" href="#contact">Contact</a>
 						</li>
-						<button type="button" class="btn btn-primary rounded-pill px-4">Get Started</button>
+						<a type="button" class="btn btn-primary rounded-pill px-4" href="#abt">Get Started</a>
 					</ul>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 	</div>
 </section>
 <!---about section--->
-<section id="abt"class="about">
+<section id="abt" class="about">
 	<div class="container">
 		<div class="abt-flex row align-items-center mb-5">
 			<div class="col-sm-12 col-md-12 col-lg-6 justify-content-center align-items-center">
@@ -518,18 +518,18 @@
 						</div>
 						<div class="col-6 form-group">
 							<label for="email" class="form-label">YOUR EMAIL</label>
-							<input type="email" class="form-control " id="name" placeholder="Your Email">
+							<input type="email" class="form-control " id="email" placeholder="Your Email">
 						</div>
 						<div class="col-12 form-group mt-4">
 							<label for="subject" class="form-label">SUBJECT</label>
-							<input type="text" class="form-control p-2" id="name" placeholder="Subject">
+							<input type="text" class="form-control p-2" id="subject" placeholder="Subject">
 						</div>
 						<div class="col-12 mt-4">
 							<label for="Textarea" class="form-label">MESSAGE</label>
 							<textarea class="form-control " id="Textarea" rows="10"></textarea>
 						</div>
 						<div class="text-center form-button mt-5 mb-2">
-							<button class="" type="button">Send Message</button>
+							<button class="" type="submit">Send Message</button>
 						</div>
 					</div>
 				</form>
@@ -640,17 +640,14 @@
 <!----footer2---->
 <section class="footersec" id="bott">
 	<div class="container">
-		<div class="row py-4">
-				<div class="col-sm-12 col-md-12 col-lg-6 copyright justify-content-center">
-					© Copyright 
-					<strong><span>Ninestars</span></strong>
-					. All Rights Reserved
-				</div>
-			
-				<div class="col-sm-12 col-md-12 col-lg-6  credits justify-content-center"> 
-					<p>Designed by 
-					<span>BootstrapMade</span></p>
-				</div>
+		<div class="copyright">
+			© Copyright 
+			<strong><span>Ninestars</span></strong>
+			. All Rights Reserved
+		</div>
+		<div class="credits"> 
+			<p>Designed by 
+			<span>BootstrapMade</span></p>
 		</div>
 	</div>
 </section>
