--- a/Ninestars/index.html
+++ b/Ninestars/index.html
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-6 order-0 order-lg-1 px-4">
-				<div class="row">
+				<div class="row banner-img">
 					<img src="image/hero-img.svg">
 				</div>
 			</div>
@@ -445,32 +445,32 @@
 		</div>
 		
 		<div class="row mt-3 g-5">
-			<div class="col-2 px-5">
+			<div class="col-sm-12 col-md-6 col-lg-2 px-5">
 				<div class="row">
 					<img src="image/client-1.png">
 				</div>
 			</div>
-			<div class="col-2 px-5">
+			<div class="col-sm-12 col-md-6 col-lg-2 px-5">
 				<div class="row">
 					<img src="image/client-2.png">
 				</div>
 			</div>
-			<div class="col-2 px-5">
+			<div class="col-sm-12 col-md-6 col-lg-2 px-5">
 				<div class="row">
 					<img src="image/client-3.png">
 				</div>
 			</div>
-			<div class="col-2 px-5">
+			<div class="col-sm-12 col-md-6 col-lg-2 px-5">
 				<div class="row">
 					<img src="image/client-4.png">
 				</div>
 			</div>
-			<div class="col-2 px-5">
+			<div class="col-sm-12 col-md-6 col-lg-2 px-5">
 				<div class="row">
 					<img src="image/client-5.png">
 				</div>
 			</div>
-			<div class="col-2 ps-5">
+			<div class="col-sm-12 col-md-6 col-lg-2 ps-5">
 				<div class="row">
 					<img src="image/client-6.png">
 				</div>
